fix version-tag shortcode and dark mode

--- a/page/static/css/theme-contao.css
+++ b/page/static/css/theme-contao.css
@@ -861,8 +861,8 @@ html[data-theme=dark] #body .video-container.shadow {
 }
 
 /* Dark mode styles for buttons */
-.btn:hover,
-.btn:focus {
+html[data-theme=dark] .btn:hover,
+html[data-theme=dark] .btn:focus {
     color: #fff !important;
 }
 
